# ghostparser

./: .gitignore  CONFIG.md  ORCHESTRATOR.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
ghostparser/: GHOSTPARSER.md  ORCHESTRATOR.md  __init__.py  __main__.py  cli_config.py  config.py  dendropy.py  denropy.py  orchestrator.py  parser.py  tree_parser.py  triplet_processor.py  triplet_utils.py
sample_configs/: orchestrator_full.json  orchestrator_full.yaml  orchestrator_minimal.yaml  tree_parser_full.yaml  tree_parser_minimal.yaml  triplet_processor_full.yaml  triplet_processor_minimal.yaml
scripts/: profile_stats_methods.py
tests/: TESTS.md  __init__.py  fixtures.py  test_config.py  test_dendropy.py  test_denropy.py  test_orchestrator.py  test_parser.py  test_tree_parser.py  test_triplet_equivalence.py  test_triplet_processor.py
