[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostparser"
version = "0.1.0"
description = "A module for processing user input and generating responses based on predefined pipeline and logic"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
	"biopython>=1.79",
	"dendropy>=4.5.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["ghostparser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
